@startuml AudioClassDiagram

!include ../../_style.puml

enum ManifestType <<StrEnum>> {
    MPD
    M3U8
}

class SongRepresentation <<dataclass>> {
    content_path: str | Path
    manifests: dict[ManifestType, str]
}

class ProcessingContext <<dataclass>> {
    orig_audio_file_path: str
    intermediate_dir: str
    final_dir: str
    audio_info: AudioStreamInfo
    converted_paths: list[str]
    song_repr: SongRepresentation | None
    loudness_lufs: float | None
    true_peak_dbtp: float | None
}

class ProcessingResult {
    song_repr: SongRepresentation
    context: ProcessingContext
    loudness_lufs: float | None
    true_peak_dbtp: float | None
}

SongRepresentation --> ManifestType
ProcessingContext o-- "0..1" SongRepresentation
ProcessingResult *-- "1" SongRepresentation
ProcessingResult *-- "1" ProcessingContext

abstract class Step {
    {abstract} process(ctx: ProcessingContext): void
    rollback(ctx: ProcessingContext): void
}

class ProcessingPipeline {
    steps: list[Step]
    do_cleanup: bool
    run(source: str, final_storage_dir: str, audio_info: AudioStreamInfo): ProcessingResult
}

ProcessingPipeline o-- "1..*" Step
ProcessingPipeline ..> ProcessingContext
ProcessingPipeline --> ProcessingResult : output

class FFmpegStep {
    wrapper: FFMPEGWrapper
    process(ctx: ProcessingContext): void
    rollback(ctx: ProcessingContext): void
}

class LoudnessMeasurementStep {
    process(ctx: ProcessingContext): void

class ShakaPackagerStep {
    wrapper: ShakaPackagerWrapper
    process(ctx: ProcessingContext): void
    rollback(ctx: ProcessingContext): void
}

Step <|-- FFmpegStep
Step <|-- LoudnessMeasurementStep
Step <|-- ShakaPackagerStep

class FFMPEGWrapper {
    audio_converters: list[FFMPEGAudioConverter]
    convert_audio(file_path, output_dir, audio_info: AudioStreamInfo, filters: list[str] | None): list[str]
    _select_converters(audio_info: AudioStreamInfo): list[FFMPEGAudioConverter]
}

class FFMPEGAudioConverter {
    encoder: flac | libfdk_aac
    bitrate: int | None
    extras: list[str]
    timeout: int | None
    lossless: bool
    convert_song(file_path: Path, storage_dir: Path, filters: list[str] | None): str
}

class "build_ffmpeg_command()" as FFMPEGCommand <<function>> {
    input_path: Path
    output_path: Path
    encoder: str
    bitrate: int | None
    extras: list[str] | None
    filters: list[str] | None
    returns list[str]
}

FFmpegStep o-- "1" FFMPEGWrapper
FFMPEGWrapper o-- "1..*" FFMPEGAudioConverter
FFMPEGAudioConverter ..> FFMPEGCommand

class FFMPEGConverters <<collapsed>> {
    FLAC_CONVERTER       (flac, lossless)
    AACHEv2_CONVERTER    (libfdk_aac, 24 kbps, aac_he_v2)
    AAC_96_CONVERTER     (libfdk_aac, 96 kbps)
    AAC_160_CONVERTER    (libfdk_aac, 160 kbps)
    AAC_320_CONVERTER    (libfdk_aac, 320 kbps)
}

note right of FFMPEGConverters
Not a real class. Collapses the five
FFMPEGAudioConverter instances used by
the full pipeline into one box for readability.
end note

FFMPEGAudioConverter <.. FFMPEGConverters

object FFMPEGFlacOnly <<instance>> {
    audio_converters = [FLAC_CONVERTER]
}

object FFMPEGFull <<instance>> {
    audio_converters = all FFMPEGConverters
}

FFMPEGWrapper <.. FFMPEGFlacOnly
FFMPEGWrapper <.. FFMPEGFull

class ShakaPackagerWrapper {
    do_cleanup: bool
    package_audio_files(local_input_paths: list[Path], storage_dir: str | Path): SongRepresentation
}

class "build_shaka_packager_command()" as ShakaPackagerCommand <<function>> {
    file_paths: list[Path]
    tmpdir: str
    bin_path: str
    segment_duration: int
    returns (list[str], Path, Path)
}

ShakaPackagerStep o-- "1" ShakaPackagerWrapper
ShakaPackagerWrapper ..> ShakaPackagerCommand
ShakaPackagerWrapper --> SongRepresentation : output

object ShakaPackagerMPDAndM3U8 <<instance>> {
}

ShakaPackagerWrapper <.. ShakaPackagerMPDAndM3U8

object AudioProcessingPipeline <<instance>> {
    steps = [\n   FFmpegStep(FFMPEGFull),\n   LoudnessMeasurementStep(),\n   ShakaPackagerStep(ShakaPackagerMPDAndM3U8)\n]
    do_cleanup = true
}

ProcessingPipeline <.. AudioProcessingPipeline

@enduml
